# ==============================================================================
# PromptShield - NLP-Based Prompt Injection Defense for AI Agents
# ==============================================================================
#
# This file is the central configuration file for the Python project.
# It defines:
# - package metadata
# - dependencies
# - optional dependency groups
# - testing configuration
# - linting / formatting rules
# - type-checking rules
#
# We are using a professional "src/" package layout:
#
#   src/
#     promptshield/
#
# This avoids accidental imports from the project root and mirrors how serious
# Python packages are usually structured.
# ==============================================================================

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"


# ==============================================================================
# Project metadata
# ==============================================================================

[project]
name = "promptshield"
version = "0.1.0"
description = "An NLP-based defensive firewall for detecting prompt injection risk in untrusted RAG, web, email, and agent tool content."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

authors = [
  { name = "Vaibhav Patel" }
]

keywords = [
  "nlp",
  "cybersecurity",
  "prompt-injection",
  "llm-security",
  "rag",
  "ai-agents",
  "machine-learning",
  "fastapi",
  "transformers"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]


# ==============================================================================
# Core runtime dependencies
# ==============================================================================
#
# Keep the main dependency list focused on what the application needs to run.
# Heavier experiment-only tools go under optional dependency groups below.
# ==============================================================================

dependencies = [
  # Configuration / validation
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.2.0,<3.0.0",
  "PyYAML>=6.0.1,<7.0.0",

  # CLI / developer UX
  "typer>=0.12.0,<1.0.0",
  "rich>=13.7.0,<14.0.0",

  # Logging
  "loguru>=0.7.2,<1.0.0",

  # Data handling
  "numpy>=1.26.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pyarrow>=15.0.0,<20.0.0",

  # Classical ML baseline
  "scikit-learn>=1.4.0,<2.0.0",
  "joblib>=1.3.0,<2.0.0",

  # Text processing
  "regex>=2023.12.25",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "lxml>=5.1.0,<6.0.0",

  # API service
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.27.0,<1.0.0",

  # HTTP utilities for future ingestion/API clients
  "httpx>=0.27.0,<1.0.0",

  # Progress bars
  "tqdm>=4.66.0,<5.0.0",
]


# ==============================================================================
# Optional dependency groups
# ==============================================================================
#
# Install examples:
#
#   pip install -e ".[dev]"
#   pip install -e ".[ml]"
#   pip install -e ".[notebooks]"
#   pip install -e ".[all]"
#
# We separate heavy ML dependencies so basic setup remains manageable.
# ==============================================================================

[project.optional-dependencies]

dev = [
  # Testing
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",

  # Code quality
  "ruff>=0.4.0,<1.0.0",
  "mypy>=1.9.0,<2.0.0",

  # Type stubs
  "types-PyYAML>=6.0.12.20240311",
  "types-beautifulsoup4>=4.12.0.20240229",
  "pandas-stubs>=2.2.0.240218",
]

ml = [
  # Hugging Face ecosystem
  "datasets>=2.19.0,<4.0.0",
  "evaluate>=0.4.0,<1.0.0",
  "transformers>=4.40.0,<5.0.0",
  "accelerate>=0.29.0,<2.0.0",

  # Deep learning backend
  # CPU install works on Mac through pip. We are not adding CUDA-specific packages.
  "torch>=2.2.0,<3.0.0",

  # Embeddings / reranking for later RAG-defense experiments
  "sentence-transformers>=2.7.0,<4.0.0",

  # Sequence labeling metrics for future span detection
  "seqeval>=1.2.2,<2.0.0",
]

notebooks = [
  "jupyter>=1.0.0,<2.0.0",
  "ipykernel>=6.29.0,<7.0.0",
  "matplotlib>=3.8.0,<4.0.0",
]

tracking = [
  # Optional experiment tracking. We will only use this once the baseline and
  # transformer training scripts are ready.
  "mlflow>=2.12.0,<3.0.0",
]

all = [
  "promptshield[dev,ml,notebooks,tracking]"
]


# ==============================================================================
# Console scripts
# ==============================================================================
#
# These let us eventually run commands like:
#
#   promptshield-api
#
# The target functions will be implemented later.
# ==============================================================================

[project.scripts]
promptshield-api = "promptshield.api.main:run"


# ==============================================================================
# setuptools package discovery
# ==============================================================================

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


# ==============================================================================
# Pytest configuration
# ==============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=promptshield",
  "--cov-report=term-missing",
]


# ==============================================================================
# Ruff configuration
# ==============================================================================
#
# Ruff handles linting and formatting. It is much faster than traditional
# flake8/black/isort combinations.
# ==============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "I",      # import sorting
  "B",      # bugbear
  "UP",     # pyupgrade
  "N",      # naming
  "S",      # security checks
  "C4",     # comprehensions
  "SIM",    # simplifications
  "ARG",    # unused arguments
  "PTH",    # pathlib recommendations
  "RUF",    # Ruff-specific rules
]

ignore = [
  # Allow assert statements in tests and small internal validation paths.
  "S101",

  # We will intentionally use clear variable names even if some are short.
  "N803",
  "N806",

  # Some security rules are too aggressive for ML/data scripts.
  # We will still write safe code manually.
  "S311",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
  "ARG001",
]
"notebooks/**/*.py" = [
  "E402",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


# ==============================================================================
# Mypy configuration
# ==============================================================================
#
# Mypy gives us static type checking. We keep it practical instead of painfully
# strict because ML libraries often have incomplete typing.
# ==============================================================================

[tool.mypy]
python_version = "3.11"
plugins = []
mypy_path = "src"
packages = ["promptshield"]

warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
  "sklearn.*",
  "joblib.*",
  "pandas.*",
  "numpy.*",
  "pyarrow.*",
  "transformers.*",
  "datasets.*",
  "evaluate.*",
  "torch.*",
  "sentence_transformers.*",
  "seqeval.*",
  "bs4.*",
  "loguru.*",
]
ignore_missing_imports = true


# ==============================================================================
# Coverage configuration
# ==============================================================================

[tool.coverage.run]
source = ["src/promptshield"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]